[package]
name = "riteraft"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/ritedb/riteraft"
description = "RiteRaft - A raft framework, for regular people"
keywords = ["raft", "distributed-systems", "ha"]

[dependencies]
async-trait = "0.1.48"
bincode = "1.3"
heed = "0.10.6"
heed-traits = "0.7"
log = { version = "0.4", features = ["std"] }
parking_lot = "0.11"
prost = "0.6"
raft = { git = "https://github.com/tikv/raft-rs.git", rev = "eec5ead3ebe8f790154c94cb5f5adb0063a674e9", features = ["prost-codec"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
slog = "2"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.3"

[build-dependencies]
tonic-build = "0.3"

