[package]
name = "riteraft"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/ritedb/riteraft"
description = "RiteRaft - A raft framework, for regular people"
keywords = ["raft", "distributed-systems", "ha"]

[dependencies]
async-trait = "0.1.48"
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
prost = "0.11"
raft = { version = "0.7", features = ["prost-codec"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
slog = "2"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.9"

[build-dependencies]
tonic-build = "0.9"

[workspace]
members = [
    "examples/riteraft-memstore",
    "examples/riteraft-warp-memstore"
]