[package]
name = "riteraft-warp-memstore"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.48"
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
riteraft = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
slog-async = "2"
slog-term = "2"
slog = "2"
slog-stdlog = "4"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
